# depivot

./: .gitignore  COVERAGE_ANALYSIS.md  DEVELOPMENT.md  ISSUES_AND_FIXES.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: tests.yml
examples/: README.md  basic_config.yaml  create_no_id_sample.py  create_sample.py  no_id_sample.xlsx  sample_input.xlsx  sql_upload_config.yaml  validation_config.yaml
sql/: create_table.sql
src/depivot/: __init__.py  __main__.py  cli.py  config.py  core.py  data_quality.py  exceptions.py  quality_rules.py  sql_upload.py  template_validators.py  utils.py  validators.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_data_quality.py  test_integration.py  test_quality_rules.py  test_sql_upload.py  test_template_validators.py  test_utils.py  test_validators.py
